# gamelib

./: CMakeLists.txt  mac_config.sh
src/: gamelib.files  gamelib.h  gamelib.includes
src/camera/: camera.cpp  camera.h
src/console/: .console.cpp.kate-swp  console.cpp  console.h
src/files/: .file.cpp.kate-swp  file.cpp  file.h
src/game/: game.cpp  game.h  game_entity.cpp  game_entity.h
src/graphics/: .renderable.cpp.kate-swp  .renderable.h.kate-swp  .sprite.h.kate-swp  .window.cpp.kate-swp  animation.cpp  animation.h  color.cpp  color.h  events.h  gfx_tools.cpp  gfx_tools.h  hud.cpp  hud.h  label.cpp  label.h  palette.cpp  palette.h  primitives.cpp  primitives.h  renderable.cpp  renderable.h  sprite.cpp  sprite.h  text.cpp  text.h  tileset.cpp  tileset.h  window.cpp  window.h
src/input/: input.cpp  input.h  joystick.cpp  joystick.h  keyboard.cpp  keyboard.h  keycodes.h  mouse.cpp  mouse.h  xbox_controller.cpp  xbox_controller.h
src/math/: constants.h  shapes.cpp  shapes.h  vector3.h
src/physics/: collision_detector.cpp  collision_detector.h  physical.cpp  physical.h
src/sfml/: sfml_window.h
src/sfml/camera/: camera.h
src/sfml/console/: console.cpp
src/sfml/game/: game.cpp  game.h  game_entity.cpp  game_entity.h
src/sfml/graphics/: animation.h  color.cpp  primitives.cpp  renderable.h  sfml_renderable.cpp  sfml_renderable.h  sfml_window.cpp  sfml_window.h  sprite.cpp  text.cpp
src/sfml/input/: input.cpp  keyboard.h  sfml_keyboard.cpp  sfml_keyboard.h
src/sfml/math/: constants.h  vector3.h
src/sfml/physics/: collision_detector.cpp  physical.h
src/sfml/statemachine/: state.cpp  state_machine.h
src/sfml/utils/: converter.cpp  converter.h  timer.h
src/statemachine/: state.h  state_machine.cpp  state_machine.h
src/utils/: .converter.h.kate-swp  converter.cpp  converter.h  grid.cpp  grid.h  log.cpp  log.h  perspective.cpp  perspective.h  timer.h
